--- a/src/main/resources/templates/tickets/list.html
+++ b/src/main/resources/templates/tickets/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ユーザー一覧 | TRACK</title>
+    <title>チケット一覧 | TRACK</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -17,10 +17,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../tickets/list.html" th:href="@{/tickets}">チケット</a>
+                    <a class="nav-link active" href="#" th:href="@{/tickets}">チケット</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">ユーザー</a>
+                    <a class="nav-link" href="../admin/users/list.html" th:href="@{/admin/users}">ユーザー</a>
                 </li>
             </ul>
         </div>
