--- a/src/main/resources/templates/admin/users/list.html
+++ b/src/main/resources/templates/admin/users/list.html
@@ -8,6 +8,20 @@
 <body>
 <section layout:fragment="page-content">
     <h1>ユーザー一覧</h1>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>ユーザーID</th>
+            <th>ユーザー名</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${userList}">
+            <th th:text="${user.userId}">(username)</th>
+            <td th:text="${user.username}">(authority)</td>
+        </tr>
+        </tbody>
+    </table>
 </section>
 </body>
 </html>
