--- a/src/main/resources/templates/tickets/creationForm.html
+++ b/src/main/resources/templates/tickets/creationForm.html
@@ -3,12 +3,11 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 <head>
-    <title>チケット一覧</title>
+    <title>チケット作成</title>
 </head>
 <body>
 <section layout:fragment="page-content">
-    <h1>チケット一覧</h1>
-    <a class="btn btn-primary" href="./creationForm.html" th:href="@{/tickets/creationForm}" role="button">チケット作成</a>
+    <h1>チケット作成</h1>
 </section>
 </body>
 </html>
