--- a/src/main/resources/templates/tickets/creationForm.html
+++ b/src/main/resources/templates/tickets/creationForm.html
@@ -7,7 +7,26 @@
 </head>
 <body>
 <section layout:fragment="page-content">
-    <h1>チケット作成</h1>
+    <h1 class="mt-3">チケット作成</h1>
+    <form action="#" th:action="@{/tickets}" th:method="post" th:object="${ticketForm}">
+        <div class="mt-3">
+            <label for="summaryInput" class="form-label">概要</label>
+            <input type="text" id="summaryInput" th:field="*{summary}" class="form-control"
+                   th:classappend="${#fields.hasErrors('summary')} ? is-invalid">
+            <p class="invalid-feedback" th:if="${#fields.hasErrors('summary')}" th:errors="*{summary}">(error)</p>
+        </div>
+        <div class="mt-3">
+            <label for="descriptionInput" class="form-label">説明</label>
+            <textarea id="descriptionInput" rows="10" th:field="*{description}" class="form-control"
+                      th:classappend="${#fields.hasErrors('description')} ? is-invalid"></textarea>
+            <p class="invalid-feedback" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">
+                (error)</p>
+        </div>
+        <div class="mt-3">
+            <button type="submit" class="btn btn-primary">作成</button>
+            <a href="./list.html" th:href="@{/issues}" class="btn btn-secondary">キャンセル</a>
+        </div>
+    </form>
 </section>
 </body>
 </html>
