--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <section layout:fragment="page-content">
-    <h1>TRACK</h1>
+    <h1 class="mt-3">TRACK</h1>
 </section>
 </body>
 </html>
