--- a/src/main/resources/templates/admin/users/creationForm.html
+++ b/src/main/resources/templates/admin/users/creationForm.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <section layout:fragment="page-content">
-    <h1>ユーザー作成</h1>
+    <h1 class="mt-3">ユーザー作成</h1>
     <form action="#" th:action="@{/admin/users}" method="post" th:object="${userForm}">
         <div class="mt-3">
             <label for="usernameInput" class="form-label">ユーザー名</label>
