--- a/src/main/resources/templates/admin/users/list.html
+++ b/src/main/resources/templates/admin/users/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <section layout:fragment="page-content">
-    <h1>ユーザー一覧</h1>
+    <h1 class="mt-3">ユーザー一覧</h1>
     <a class="btn btn-primary" href="./creationForm.html" th:href="@{/admin/users/creationForm}" role="button">ユーザー作成</a>
     <table class="table">
         <thead>
