--- a/src/main/resources/templates/tickets/list.html
+++ b/src/main/resources/templates/tickets/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <section layout:fragment="page-content">
-    <h1>チケット一覧</h1>
+    <h1 class="mt-3">チケット一覧</h1>
     <a class="btn btn-primary" href="./creationForm.html" th:href="@{/tickets/creationForm}" role="button">チケット作成</a>
     <table class="table">
         <thead>
