--- a/src/main/resources/templates/admin/users/creationForm.html
+++ b/src/main/resources/templates/admin/users/creationForm.html
@@ -42,7 +42,7 @@
         </div>
         <div class="mt-3">
             <button type="submit" class="btn btn-primary">作成</button>
-            <a href="./list.html" th:href="@{/users}" class="btn btn-secondary">キャンセル</a>
+            <a href="./list.html" th:href="@{/admin/users}" class="btn btn-secondary">キャンセル</a>
         </div>
     </form>
 </section>
