--- a/src/main/resources/templates/admin/users/list.html
+++ b/src/main/resources/templates/admin/users/list.html
@@ -9,7 +9,7 @@
 <section layout:fragment="page-content">
     <h1 class="mt-3">ユーザー一覧</h1>
     <a class="btn btn-primary" href="./creationForm.html" th:href="@{/admin/users/creationForm}" role="button">ユーザー作成</a>
-    <table class="table">
+    <table class="table mt-3">
         <thead>
         <tr>
             <th>ユーザーID</th>
