--- a/src/main/resources/templates/tickets/list.html
+++ b/src/main/resources/templates/tickets/list.html
@@ -9,7 +9,7 @@
 <section layout:fragment="page-content">
     <h1 class="mt-3">チケット一覧</h1>
     <a class="btn btn-primary" href="./creationForm.html" th:href="@{/tickets/creationForm}" role="button">チケット作成</a>
-    <table class="table">
+    <table class="table mt-3">
         <thead>
         <tr>
             <th>#</th>
