--- a/src/main/resources/templates/tickets/creationForm.html
+++ b/src/main/resources/templates/tickets/creationForm.html
@@ -10,6 +10,16 @@
     <h1 class="mt-3">チケット作成</h1>
     <form action="#" th:action="@{/tickets}" th:method="post" th:object="${ticketForm}">
         <div class="mt-3">
+            <label for="typeInput">種別</label>
+            <select id="typeInput" class="form-select form-control" th:field="*{type}"
+                    th:classappend="${#fields.hasErrors('type')} ? is-invalid">
+                <option value="1">Bug</option>
+                <option value="2">Enhancement</option>
+                <option value="3">Task</option>
+            </select>
+            <p class="invalid-feedback" th:if="${#fields.hasErrors('type')}" th:errors="*{type}">(error)</p>
+        </div>
+        <div class="mt-3">
             <label for="summaryInput" class="form-label">概要</label>
             <input type="text" id="summaryInput" th:field="*{summary}" class="form-control"
                    th:classappend="${#fields.hasErrors('summary')} ? is-invalid">
